--- a/Map_Geofencing/ViewControllers/MapViewController/BottomSheetCell.xib
+++ b/Map_Geofencing/ViewControllers/MapViewController/BottomSheetCell.xib
@@ -9,28 +9,37 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="AvenirNextCondensed.ttc">
+            <string>AvenirNextCondensed-Medium</string>
+            <string>AvenirNextCondensed-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="BottomSheetCell" customModule="Map_Geofencing" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="39.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="drm-R8-KDx">
-                        <rect key="frame" x="16" y="12" width="284" height="20.5"/>
+                        <rect key="frame" x="12" y="8" width="296" height="23.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J7A-nY-duo">
-                                <rect key="frame" x="0.0" y="0.0" width="102" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Distance" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J7A-nY-duo">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="23.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="vih-fo-S7s"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNextCondensed-Medium" family="Avenir Next Condensed" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scientific Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SUk-f4-RFI">
-                                <rect key="frame" x="102" y="0.0" width="182" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scientific Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SUk-f4-RFI">
+                                <rect key="frame" x="80" y="0.0" width="216" height="23.5"/>
+                                <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -38,13 +47,17 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="drm-R8-KDx" secondAttribute="trailing" constant="20" id="AhM-lZ-Haw"/>
-                    <constraint firstItem="drm-R8-KDx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Yh0-re-uGM"/>
-                    <constraint firstItem="drm-R8-KDx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ZBZ-Ov-x0V"/>
-                    <constraint firstAttribute="bottom" secondItem="drm-R8-KDx" secondAttribute="bottom" constant="11" id="vc1-XB-36N"/>
+                    <constraint firstAttribute="trailing" secondItem="drm-R8-KDx" secondAttribute="trailing" constant="12" id="AhM-lZ-Haw"/>
+                    <constraint firstItem="drm-R8-KDx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="Yh0-re-uGM"/>
+                    <constraint firstItem="drm-R8-KDx" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="ZBZ-Ov-x0V"/>
+                    <constraint firstAttribute="bottom" secondItem="drm-R8-KDx" secondAttribute="bottom" constant="8" id="vc1-XB-36N"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="distance" destination="J7A-nY-duo" id="VaA-OL-Q3k"/>
+                <outlet property="scientificName" destination="SUk-f4-RFI" id="IUW-1D-KUu"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
